--- a/Ghost Host/index.html
+++ b/Ghost Host/index.html
@@ -13,7 +13,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>     
     </head>
     <body data-spy="scroll" data-target="#navmenu">	
-        <header id="main_menu" class="header">
+        <header id="main_menu">
             <div class="main_menu_bg navbar-fixed-top">
                 <div class="container">
                     <div class="row">
