--- a/Ghost Host/index.html
+++ b/Ghost Host/index.html
@@ -454,11 +454,11 @@
                         <div class="col-sm-9 col-xs-12">
                             <div class="footer_menu">
                                 <ul class="list-inline">
-                                    <li><a href="">HOME</a></li>
-                                    <li><a href="">ABOUT US</a></li>
-                                    <li><a href="">BLOG</a></li>
-                                    <li><a href="">POLICY</a></li>
-                                    <li><a href="">CONTACT</a></li>
+                                    <li><a href="#home">HOME</a></li>
+                                    <li><a href="#pricing">ABOUT US</a></li>
+                                    <li><a href="#service">BLOG</a></li>
+                                    <li><a href="#clients">POLICY</a></li>
+                                    <li><a href="#footer">CONTACT</a></li>
                                 </ul>
                             </div>
                         </div>
