--- a/Ghost Host/index.html
+++ b/Ghost Host/index.html
@@ -480,20 +480,20 @@
                                     <div class="col-sm-3 col-xs-6">
                                         <div class="single_right_footer">
                                             <ul>
-                                                <li><a href=""><i class="lnr lnr-chevron-right"></i> &#9658; Support</a></li>
-                                                <li><a href=""><i class="lnr lnr-chevron-right"></i> &#9658; Account</a></li>
-                                                <li><a href=""><i class="lnr lnr-chevron-right"></i> &#9658; Product Catalog</a></li>
-                                                <li><a href=""><i class="lnr lnr-chevron-right"></i> &#9658; Shortcodes</a></li>
+                                                <li><a href=""> &#9658; Support</a></li>
+                                                <li><a href=""> &#9658; Account</a></li>
+                                                <li><a href=""> &#9658; Product Catalog</a></li>
+                                                <li><a href=""> &#9658; Shortcodes</a></li>
                                             </ul>
                                         </div>
                                     </div>
                                     <div class="col-sm-3 col-xs-6">
                                         <div class="single_right_footer">
                                             <ul>
-                                                <li><a href=""><i class="lnr lnr-chevron-right"></i> &#9658; Site Map</a></li>
-                                                <li><a href=""><i class="lnr lnr-chevron-right"></i> &#9658; Whois Search</a></li>
-                                                <li><a href=""><i class="lnr lnr-chevron-right"></i> &#9658; Web Mail</a></li>
-                                                <li><a href=""><i class="lnr lnr-chevron-right"></i> &#9658; Find Domain</a></li>
+                                                <li><a href=""> &#9658; Site Map</a></li>
+                                                <li><a href=""> &#9658; Whois Search</a></li>
+                                                <li><a href=""> &#9658; Web Mail</a></li>
+                                                <li><a href=""> &#9658; Find Domain</a></li>
                                             </ul>
                                         </div>
                                     </div>
