--- a/Ghost Host/index.html
+++ b/Ghost Host/index.html
@@ -90,7 +90,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-10 col-sm-offset-1">
-						<div class="main_somainsearrce">
+						<div>
 							<div class="head_title text-center " >
 								<h2>Would you like to buy a new domain ?</h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse auctor mauris ac nulla interdum, id molestier.</p>
