--- a/Ghost Host/index.html
+++ b/Ghost Host/index.html
@@ -69,7 +69,7 @@
     
     
             <section id="register" class="register">
-                <div class="container-fullwidth">
+                <div>
                     <div class="row text-center">
                         <div class="col-sm-6 col-xs-6 no-padding">
                             <div class="single_register single_login">
