--- a/Ghost Host/index.html
+++ b/Ghost Host/index.html
@@ -21,7 +21,7 @@
                             <nav class="navbar navbar-default" id="navmenu">
                                 <div class="container-fluid">
                                     <div class="navbar-header">
-                                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                                             <span class="sr-only">Toggle navigation</span>
                                             <span class="icon-bar"></span>
                                             <span class="icon-bar"></span>
@@ -53,7 +53,7 @@
                 <div class="home-overlay-fluid">
                     <div class="container">
                         <div class="row">
-                            <div class="main_slider_area">
+                            <div>
                                 <div>
                                     <div class="single_slider">
                                         <h2>HELLO!</h2>
