--- a/Ghost Host/index.html
+++ b/Ghost Host/index.html
@@ -40,7 +40,7 @@
                                             <li><a href="#service">Blog</a></li>
                                             <li><a href="#footer">Support</a></li>
                                         </ul>
-                                    </div>
+                                     </div>
                                 </div>
                             </nav>
                         </div>	
@@ -72,12 +72,12 @@
                 <div>
                     <div class="row text-center">
                         <div class="col-sm-6 col-xs-6 no-padding">
-                            <div class="single_register single_login">
+                            <div class="single_register single_login transition_for_register">
                                 <a href="">Login</a>
                             </div>
                         </div>
                         <div class="col-sm-6 col-xs-6 no-padding">
-                            <div class="single_register">
+                            <div class="single_register transition_for_register">
                                 <a href="">Register</a>
                             </div>
                         </div>
