--- a/Ghost Host/index.html
+++ b/Ghost Host/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Gost Host</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css and images/css.css">
+        <link rel="stylesheet" href="css and images/fonts.css">
         <link rel="stylesheet" href="fonts/stylesheet.css">
         <link rel="stylesheet" href="css and images/font-awesome.min.css">
         <link rel="stylesheet" href="css and images/bootstrap.min.css">
