--- a/Ghost Host/index.html
+++ b/Ghost Host/index.html
@@ -698,83 +698,39 @@
             </div>
 
         </section>
-
-
-
-
-
-
-
-
-
-        <section id="clients" class="comments">
-
-            <div class="overlay-fluid-block">
-
-                <div class="container-fluid">                  
-
-                            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-
-                                <ul class="carousel-indicators">
-
-                                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-
-                                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-
-                                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-
-                                </ul>
-
-                                <div class="carousel-inner">
-
-                                  <div class="carousel-item active">
-
-                                        <div class="carousel-caption d-none d-md-block">
-
-                                    <p class="text-center href_for_carusel" >“Suspendisse tempor turpis odio, sit amet cursus leo consequat non. Maecenas lacinia faucibus enimqui
-
-                                        interdum dolor pulvinar vitae.” <a href="" class="href_for_carusel">John Doe</a> </p>
-
-                                        </div> 
-
-                                  </div>
-
-                                  <div class="carousel-item">
-
-                                        <div class="carousel-caption d-none d-md-block">
-
-                                    <p class="text-center href_for_carusel">“Suspendisse tempor turpis odio, sit amet cursus leo consequat non. Maecenas lacinia faucibus enimqui
-
-                                            interdum dolor pulvinar vitae.”<a href="" class="href_for_carusel">John Doe</a> </p>
-
-                                        </div>
-
-                                  </div>
-
-                                  <div class="carousel-item">
-
-                                        <div class="carousel-caption d-none d-md-block">
-
-                                    <p class="text-center href_for_carusel">“Suspendisse tempor turpis odio, sit amet cursus leo consequat non. Maecenas lacinia faucibus enimqui
-
-                                        interdum dolor pulvinar vitae.”<a href="" class="href_for_carusel">John Doe</a></p>
-
-                                        </div>
-
-                                  </div>
-
-                                </div>  
-
+        <section id="clients">
+                <div id="carousel" class="carousel slide" data-ride="carousel">
+                    <ul class="carousel-indicators">
+                        <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel" data-slide-to="1"></li>
+                        <li data-target="#carousel" data-slide-to="2"></li>
+                    </ul>
+                    <div class="carousel-inner text-center">
+                        <div class="item active">
+                                <div class="vignette">
+                         <img src="css and images\commnsbg.jpg" alt="background"></div>
+                            <div class="carousel-caption">
+                                <p class="href_for_carusel">“Suspendisse tempor turpis odio, sit amet cursus leo consequat non. Maecenas lacinia faucibus enimqui
+                                        interdum dolor pulvinar vitae.” <a href="" class="href_for_carusel">John Doe</a></p>
                             </div>
-
-            </div>                                              
-
-            </div> 
-
+                        </div>
+                        <div class="item"><div class="vignette">
+                                <img src="css and images\commnsbg.jpg" alt="background"></div>
+                            <div class="carousel-caption">
+                                    <p class="href_for_carusel">“Suspendisse tempor turpis odio, sit amet cursus leo consequat non. Maecenas lacinia faucibus enimqui
+                                            interdum dolor pulvinar vitae.” <a href="" class="href_for_carusel">Jonny Doe</a></p>
+                            </div>
+                        </div>
+                        <div class="item"><div class="vignette">
+                                <img src="css and images\commnsbg.jpg" alt="background"></div>
+                            <div class="carousel-caption">
+                                    <p class="href_for_carusel">“Suspendisse tempor turpis odio, sit amet cursus leo consequat non. Maecenas lacinia faucibus enimqui
+                                            interdum dolor pulvinar vitae.” <a href="" class="href_for_carusel">Johnathan Doe</a></p>
+                            </div>
+                        </div>
+                    </div>
+        </div>    
         </section>
-
-
-
         <section id="service" class="service">
 
             <div class="container">
@@ -1015,6 +971,7 @@
 
                         </div> 
 
+
                     </div>
 
                 </div>            
@@ -1034,6 +991,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src = "https://code.jquery.com/jquery-3.3.1.min.js "></script>
 
     </body>
 
